--- a/CollisionsDB/CollisionsDB/Views/Home/Details.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Details.cshtml
@@ -8,16 +8,16 @@
 
 <table class="table table-sm table-bordered table-striped">
     <tbody>
-        <tr><th>Collision ID:</th><td>@Model.CRASH_ID</td></tr>
-        <tr><th>Collision Date:</th><td>@Model.CRASH_DATETIME</td></tr>
-        <tr><th>Collision Route:</th><td>@Model.ROUTE</td></tr>
-        <tr><th>Collision Milepoint:</th><td>@Model.MILEPOINT</td></tr>
-        <tr><th>Latitude (UTM):</th><td>@Model.LAT_UTM_Y</td></tr>
-        <tr><th>Longitude (UTM:</th><td>@Model.LONG_UTM_X</td></tr>
-        <tr><th>Collision Road Name:</th><td>@Model.MAIN_ROAD_NAME</td></tr>
+        <tr><th>Collision ID:</th><td>@Model.CrashId</td></tr>
+        <tr><th>Collision Date:</th><td>@Model.CrashDatetime</td></tr>
+        <tr><th>Collision Route:</th><td>@Model.Route</td></tr>
+        <tr><th>Collision Milepoint:</th><td>@Model.Milepoint</td></tr>
+        <tr><th>Latitude (UTM):</th><td>@Model.LatUtmY</td></tr>
+        <tr><th>Longitude (UTM:</th><td>@Model.LongUtmX</td></tr>
+        <tr><th>Collision Road Name:</th><td>@Model.MainRoadName</td></tr>
         <tr><th>Collision City:</th><td>@Model.City.CityName</td></tr>
         <tr><th>Collision County:</th><td>@Model.County.CountyName</td></tr>
-        <tr><th>Collision Severity:</th><td>@Model.CRASH_SEVERITY_ID</td></tr>
+        <tr><th>Collision Severity:</th><td>@Model.CrashSeverityId</td></tr>
         @*@if (Model.WORK_ZONE_RELATED == "TRUE")
         {
             <tr><th>Work Zone Related:</th><td>@Model.WORK_ZONE_RELATED</td></tr>
