--- a/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
@@ -37,4 +37,4 @@
 </table>
 <br />
 
-<div page-model="Model.PageInfo" page-action="Summary" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
+<div page-model="@Model.PageInfo" page-action="Summary" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m1"></div>
