--- a/CollisionsDB/CollisionsDB/Views/_ViewImports.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using CollisionsDB.Models
 @using CollisionsDB.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, CollisionsDB
