--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>                        
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Summary">Summary</a>
                         </li>
@@ -31,6 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Admin Login</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
