--- a/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Home/Summary.cshtml
@@ -4,7 +4,12 @@
 
 @model CollisionsViewModel
 
-<table class="table table-sm table-striped table-bordered">
+<div class="col-3">
+    <vc:counties></vc:counties>
+</div>
+
+<div class="col-9">
+    <table class="table table-sm table-striped table-bordered">
 
     <thead>
         <tr>
@@ -38,3 +43,4 @@
 <br />
 
 <div page-model="@Model.PageInfo" page-action="Summary" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m1"></div>
+</div>
