--- a/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
+++ b/CollisionsDB/CollisionsDB/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <partial name="_CookieConsentPartial" />
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CollisionsDB</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +21,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>                        
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Summary">Summary</a>
                         </li>
